--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,13 @@
 <h1>Home page</h1>
 
 <hr />
+
+<h3>Traditional {{ traditionalProperty }}</h3>
+<h3>Signal {{ signalProperty() }}</h3>
+
+<button (click)="changeTraditional()">Cambiar Tradicional</button>
+<button (click)="changeSignal()">Cambiar Signal</button>
+
+<br />
+
+<app-title [title]="signalProperty()" />
